# estudofastapi

./: pyproject.toml
estudofastapi/: app.py  database.py  models.py  settings.py
migrations/: env.py
migrations/versions/: 81d29533e349_create_user_table.py
tests/: conftest.py  test_app.py  test_db.py
